--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Ski or Snowboard images!</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Upload an image of yourself having fun in the snow, and find out whether you're skiing or snowboarding!
     </p>
     <div class='content'>
       <div class='no-display'>
