--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,7 +7,7 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Ski or Snowboard images!</div>
+    <div class='title'>Classify Ski or Snowboard images!⛷ 🏂</div>
     <p>
       Upload an image of yourself having fun in the snow, and find out whether you're skiing or snowboarding!
     </p>
